--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/aginCoder/TypeScript_VTI'"
               >
                 Github
               </button>
@@ -303,7 +303,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/aginCoder/Furniture_Website'"
               >
                 Github
               </button>
