--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/My_Cv.pdf')"
           >
-            Download CV
+            Live Demo CV
           </button>
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
             Contact Info
